--- a/package.json
+++ b/package.json
@@ -1,4 +1,9 @@
 {
+  "nodemonConfig": {
+    "ignore": [
+      "db/*"
+    ]
+  },
   "name": "notes",
   "version": "1.0.0",
   "description": "",
